@startuml
'https://plantuml.com/sequence-diagram
abstract class NhanVienF88{
String chucVu, ten
int hanMucDuyetVay
void {abstract}duyetChoVay(int khoanVay)
NhanVienF88 {abstract}capTren(NhanVienF88 capTren)
}

class ChuTich

class NhanVienChoVayF88

NhanVienF88<|--ChuTich
NhanVienF88<|--NhanVienChoVayF88
NhanVienChoVayF88 --> NhanVienF88:capTren

@enduml